# haskell_batteline

./: LICENSE  README.md  battleline.cabal
app/: .Main.hs.swp  Main.hs
src/Data/: Formation.hs
test/Data/: FormationSpec.hs
