name:                battleline
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/halogenandtoast/battleline#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Mongeau
maintainer:          halogenandtoast@gmail.com
copyright:           2017 Matthew Mongeau
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable battleline
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , battleline
                     , random
                     , MonadRandom
  default-language:    Haskell2010

test-suite battleline-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , battleline
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/halogenandtoast/battleline
